update post: Connectra Insights

--- a/cm6bv4ti9000309jgc4531kg5.md
+++ b/cm6bv4ti9000309jgc4531kg5.md
@@ -535,56 +535,242 @@ startActivity(intent);
 
 ## 6\. ScheduleFragment.java
 
-**Introduction:**  
-The `ScheduleFragment` provides a task scheduler, enabling users to organize and manage daily activities using a calendar and Firebase integration.
+**Introduction:** The `ScheduleFragment` provides a shared task scheduler functionality, allowing connected users to create, manage, and synchronize daily tasks through a calendar interface with Firebase integration.
 
 **Key Features and Implementation:**
 
-1. **Calendar Integration**  
-    A `CalendarView` displays dates, and the app retrieves tasks associated with the selected date. Tasks are dynamically updated in a RecyclerView.
+1. **UI Components and Initialization**
     
 
+The fragment sets up a calendar view, task list, and connection management elements:
+
 ```java
-calendarView.setOnDateChangeListener((view1, year, month, dayOfMonth) -> {
-    selectedDate = year + "-" + (month + 1) + "-" + dayOfMonth;
-    fetchTasks();
-});
+javaCopycalendarView = view.findViewById(R.id.calendar_view);
+rvTasks = view.findViewById(R.id.rv_tasks);
+tvNoTasks = view.findViewById(R.id.tv_no_tasks);
+btnAddTask = view.findViewById(R.id.btn_add_task);
 ```
 
-2. **Task Management**  
-    Users can add or delete tasks for specific dates. The app ensures data integrity by associating tasks with unique IDs and storing them under their respective dates in Firebase.
+2. **Connection Management**
     
 
+The fragment connects to the user management system, allowing users to manage connections:
+
 ```java
-String taskId = tasksRef.child(selectedDate).push().getKey();
-tasksRef.child(selectedDate).child(taskId).setValue(taskMap);
+javaCopybtnManageConnections = view.findViewById(R.id.btn_manage_connections);
+btnManageConnections.setOnClickListener(v ->
+        startActivity(new Intent(getActivity(), ConnectionActivity.class))
+);
 ```
 
-3. **Add Task Dialog**  
-    Users can add tasks through a custom dialog, ensuring that empty titles are not allowed.
+3. **Multi-User Task Synchronization**
     
 
+The code supports shared tasks between connected users:
+
 ```java
-builder.setPositiveButton("Add", (dialog, which) -> {
-    if (!TextUtils.isEmpty(title)) {
-        addTaskToFirebase(title);
-    } else {
-        Toast.makeText(getContext(), "Task title cannot be empty", Toast.LENGTH_SHORT).show();
+javaCopyprivate void fetchConnectedUsers() {
+    DatabaseReference connectionsRef = FirebaseDatabase.getInstance().getReference("Connections")
+            .child(FirebaseAuth.getInstance().getUid());
+
+    connectionsRef.addValueEventListener(new ValueEventListener() {
+        @Override
+        public void onDataChange(@NonNull DataSnapshot snapshot) {
+            connectedUserIds.clear();
+            for (DataSnapshot ds : snapshot.getChildren()) {
+                if ("connected".equals(ds.child("status").getValue(String.class))) {
+                    connectedUserIds.add(ds.getKey());
+                }
+            }
+            setupTaskListeners();
+        }
+    });
+}
+```
+
+4. **Dynamic Task Listeners**
+    
+
+The fragment manages multiple database listeners to aggregate tasks from all connected users:
+
+```java
+javaCopyprivate void setupTaskListeners() {
+    for (DatabaseReference ref : taskListeners.keySet()) {
+        ref.removeEventListener(taskListeners.get(ref));
     }
+    taskListeners.clear();
+    userTasksMap.clear();
+
+    // Add listener for current user
+    addUserTaskListener(FirebaseAuth.getInstance().getUid());
+
+    // Add listeners for connected users
+    for (String userId : connectedUserIds) {
+        addUserTaskListener(userId);
+    }
+}
+```
+
+5. **Task Aggregation**
+    
+
+Tasks from multiple users are efficiently merged and displayed:
+
+```java
+javaCopyprivate void aggregateTasks() {
+    Map<String, Task> taskMap = new HashMap<>();
+    for (List<Task> tasks : userTasksMap.values()) {
+        for (Task task : tasks) {
+            // Use task ID as key to avoid duplicates
+            taskMap.put(task.getId(), task);
+        }
+    }
+    taskList.clear();
+    taskList.addAll(taskMap.values());
+    taskAdapter.notifyDataSetChanged();
+    updateUI();
+}
+```
+
+6. **Task Synchronization**
+    
+
+When a task is checked or unchecked, the state is synchronized across all connected users:
+
+```java
+javaCopytaskAdapter.setOnCheckListener((task, isChecked) -> {
+    final String taskOwnerId = (task.getOwnerId() != null) ? task.getOwnerId() : FirebaseAuth.getInstance().getUid();
+
+    DatabaseReference ownerTaskRef = FirebaseDatabase.getInstance().getReference("Tasks")
+            .child(taskOwnerId)
+            .child(selectedDate)
+            .child(task.getId())
+            .child("checked");
+
+    ownerTaskRef.setValue(isChecked)
+            .addOnSuccessListener(aVoid -> {
+                for (String userId : connectedUserIds) {
+                    if (!userId.equals(taskOwnerId)) {
+                        FirebaseDatabase.getInstance().getReference("Tasks")
+                                .child(userId)
+                                .child(selectedDate)
+                                .child(task.getId())
+                                .child("checked")
+                                .setValue(isChecked);
+                    }
+                }
+            });
 });
 ```
 
-4. **Task Deletion**  
-    A confirmation dialog prevents accidental deletion of tasks.
+7. **Task Creation with Content Filtering**
     
 
+When adding a new task, inappropriate content is filtered:
+
 ```java
-new AlertDialog.Builder(getContext())
-        .setTitle("Delete Task")
-        .setMessage("Are you sure you want to delete this task?")
-        .setPositiveButton("Yes", (dialog, which) -> deleteTask(task))
-        .show();
+javaCopyif (!TextUtils.isEmpty(title)) {
+    if (MessageFilter.containsInappropriateContent(title)) {
+        Toast.makeText(getContext(),
+                "Can't use inappropriate words",
+                Toast.LENGTH_SHORT).show();
+        return;
+    }
+    addTaskToFirebase(title);
+} else {
+    toast("Task title cannot be empty");
+}
 ```
+
+8. **Task Propagation**
+    
+
+Tasks created by one user are propagated to all connected users:
+
+```java
+javaCopyprivate void addTaskToFirebase(String title) {
+    String taskId = FirebaseDatabase.getInstance().getReference().push().getKey();
+    HashMap<String, Object> taskMap = new HashMap<>();
+    taskMap.put("title", title);
+    taskMap.put("checked", false);
+    taskMap.put("ownerId", FirebaseAuth.getInstance().getUid());
+
+    // Save to current user
+    tasksRef.child(selectedDate).child(taskId).setValue(taskMap)
+            .addOnSuccessListener(aVoid -> {
+                // Propagate to connected users
+                for (String userId : connectedUserIds) {
+                    FirebaseDatabase.getInstance().getReference("Tasks")
+                            .child(userId)
+                            .child(selectedDate)
+                            .child(taskId)
+                            .setValue(taskMap);
+                }
+                snackbar("Task added");
+            });
+}
+```
+
+9. **Connected Partner Display**
+    
+
+The fragment shows which partner the user is currently connected with:
+
+```java
+javaCopyprivate void updateConnectedPartnerUI() {
+    DatabaseReference connRef = FirebaseDatabase.getInstance().getReference("Connections")
+            .child(FirebaseAuth.getInstance().getUid());
+
+    connRef.orderByChild("status").equalTo("connected").addListenerForSingleValueEvent(new ValueEventListener() {
+        @Override
+        public void onDataChange(@NonNull DataSnapshot snapshot) {
+            if(snapshot.exists()) {
+                for(DataSnapshot ds : snapshot.getChildren()) {
+                    String partnerId = ds.getKey();
+                    FirebaseDatabase.getInstance().getReference("Users").child(partnerId)
+                            .addListenerForSingleValueEvent(new ValueEventListener() {
+                                @Override
+                                public void onDataChange(@NonNull DataSnapshot userSnapshot) {
+                                    String username = userSnapshot.child("username").getValue(String.class);
+                                    tvConnectedPartner.setText("Connected: @" + username);
+                                }
+                            });
+                    return;
+                }
+            }
+            tvConnectedPartner.setText("No connected partner");
+        }
+    });
+}
+```
+
+10. **Ownership Control**
+    
+
+Task deletion is restricted to the task owner:
+
+```java
+javaCopyprivate void deleteTask(Task task) {
+    String currentUserId = FirebaseAuth.getInstance().getUid();
+    if (currentUserId.equals(task.getOwnerId())) {
+        tasksRef.child(selectedDate).child(task.getId()).removeValue()
+                .addOnSuccessListener(aVoid -> {
+                    for (String userId : connectedUserIds) {
+                        FirebaseDatabase.getInstance().getReference("Tasks")
+                                .child(userId)
+                                .child(selectedDate)
+                                .child(task.getId())
+                                .removeValue();
+                    }
+                    snackbar("Task deleted");
+                });
+    } else {
+        toast("Only the owner can delete this task");
+    }
+}
+```
+
+This implementation creates a collaborative task management system where connected users can view and interact with each other's tasks while maintaining appropriate ownership controls.
 
 ## 7\. SearchFragment.java
 
